# lidar-control

./: .gitignore  CMakeLists.txt  README.md  config.doxygen
.github/workflows/: main.yml
cmake/: dependencies.cmake  flags.cmake
inc/: common.hpp  display.hpp  helpers.hpp  lidar.hpp  lidarfactory.hpp  samples.hpp  scan.hpp  scanfactory.hpp  scanning.hpp
inc/interfaces/: lidar.hpp  samples.hpp  scan.hpp
scripts/: initwslusb.sh  setlocalecp1251.sh
src/: aseries.cpp  common.cpp  cseries.cpp  display.cpp  helpers.cpp  lidar.cpp  lidarfactory.cpp  main.cpp  samples.cpp  scan.cpp  scanfactory.cpp  scanning.cpp
tests/: CMakeLists.txt
tests/inc/: test_common.hpp
